--- a/DOM/practica.html
+++ b/DOM/practica.html
@@ -40,6 +40,8 @@
             <figcaption>Técnología</figcaption>
         </figure>
     </section>
+    
+    <script src="prueba-DOM.js"></script>
 </body>
 
 </html>
