--- a/DOM/index.html
+++ b/DOM/index.html
@@ -50,6 +50,15 @@
             <img src="https:placeimg.com/150/150/tech" alt="Técnología">
         </figure>
     </section>
+
+    beforebegin
+    <div>
+        afterbegin
+        ...
+        beforeend
+    </div>
+    afterend
+
     <!-- Para asociar un JavaScript con HTML se utiliza la etiqueta script de la siguiente forma:
   <script src="nombrePrograma.js"></script> -->
     <script src="1-DOM.js"></script>
